add duration filling to mapper, misc warning fixes